--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -31,5 +31,5 @@ jobs:
         continue-on-error: false
 
       - name: Terraform Destroy
-        run: terraform destroy -auto-approve
+        run: terraform destroy -auto-approve -lock=false
         continue-on-error: false
