--- a/.github/workflows/build-observability.yml
+++ b/.github/workflows/build-observability.yml
@@ -1,4 +1,4 @@
-name: ACR and AKS Terraform Deploy
+name: Build Observability Infra With Terraform in Azure
 env:
   ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
   ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
