refactor: prometheus e pipeline

--- a/.github/workflows/build-observability.yml
+++ b/.github/workflows/build-observability.yml
@@ -10,6 +10,9 @@ env:
 
 on:
   workflow_dispatch:
+  push:
+      branches:
+        - main
 jobs:
   Create-Observability-Terraform:
     name: Deploy Infra With Terraform in Azure
