--- a/.github/workflows/build-cicd.yml
+++ b/.github/workflows/build-cicd.yml
@@ -8,6 +8,9 @@ jobs:
 
   ci-build-and-push:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write # Adicione esta linha
+      contents: read
     steps:
       - name: Checkout do código
         uses: actions/checkout@v4
@@ -18,7 +21,6 @@ jobs:
           client-id: ${{ secrets.ARM_CLIENT_ID }}
           tenant-id: ${{ secrets.ARM_TENANT_ID }}
           subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-          client-secret: ${{ secrets.ARM_CLIENT_SECRET }}
 
       - name: Login no Azure Container Registry
         uses: docker/login-action@v3
