--- a/.github/workflows/build-cicd.yml
+++ b/.github/workflows/build-cicd.yml
@@ -19,7 +19,7 @@ jobs:
           tenant-id: ${{ secrets.ARM_TENANT_ID }}
           subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
           client-secret: ${{ secrets.ARM_CLIENT_SECRET }}
-          auth-type: 'SPN'
+          auth-type: 'SERVICE_PRINCIPAL'
 
       - name: Login no Azure Container Registry
         uses: docker/login-action@v3
