--- a/.github/workflows/build-cicd.yml
+++ b/.github/workflows/build-cicd.yml
@@ -8,6 +8,9 @@ jobs:
 
   ci-build-and-push:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write # Adicione esta linha
+      contents: read
     steps:
       - name: Checkout do código
         uses: actions/checkout@v4
