--- a/.github/workflows/build-cicd.yml
+++ b/.github/workflows/build-cicd.yml
@@ -15,24 +15,22 @@ jobs:
       - name: Checkout do código
         uses: actions/checkout@v4
 
-      - name: Login no Azure CLI
-        uses: azure/login@v1
+      - name: Azure Login
+        uses: Azure/login@v2.3.0
         with:
           client-id: ${{ secrets.ARM_CLIENT_ID }}
           tenant-id: ${{ secrets.ARM_TENANT_ID }}
           subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
           client-secret: ${{ secrets.ARM_CLIENT_SECRET }}
-          auth-type: 'SERVICE_PRINCIPAL'
+      # - name: Login no Azure Container Registry
+      #   uses: docker/login-action@v3
+      #   with:
+      #     registry: acrdesafiogovbr.azurecr.io
+      #     username: ${{ secrets.ARM_CLIENT_ID }}
+      #     password: ${{ secrets.ARM_CLIENT_SECRET }}
 
-      - name: Login no Azure Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: acrdesafiogovbr.azurecr.io
-          username: ${{ secrets.ARM_CLIENT_ID }}
-          password: ${{ secrets.ARM_CLIENT_SECRET }}
-
-      - name: Build da imagem Docker
-        run: docker build -t acrdesafiogovbr.azurecr.io/meu-website:${{ github.sha }} .
+      # - name: Build da imagem Docker
+      #   run: docker build -t acrdesafiogovbr.azurecr.io/meu-website:${{ github.sha }} .
 
 #       - name: Push da imagem para o ACR
 #         run: docker push acrdesafiogovbr.azurecr.io/meu-website:${{ github.sha }}
