--- a/.github/workflows/build-cicd.yml
+++ b/.github/workflows/build-cicd.yml
@@ -1,45 +1,47 @@
 name: CI-CD
 on:
-  push:
-    branches: ["main"]
   workflow_dispatch:
-
+  push:
+      branches:
+        - main
 jobs:
 
   ci-build-and-push:
     runs-on: ubuntu-latest
     permissions:
-      id-token: write # Adicione esta linha
+      id-token: write
       contents: read
     steps:
       - name: Checkout do código
         uses: actions/checkout@v4
 
-      - name: Azure Login
-        uses: Azure/login@v2.3.0
+      - name: Login no Azure CLI
+        uses: azure/login@v1
         with:
           client-id: ${{ secrets.ARM_CLIENT_ID }}
           tenant-id: ${{ secrets.ARM_TENANT_ID }}
           subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
           client-secret: ${{ secrets.ARM_CLIENT_SECRET }}
-      # - name: Login no Azure Container Registry
-      #   uses: docker/login-action@v3
-      #   with:
-      #     registry: acrdesafiogovbr.azurecr.io
-      #     username: ${{ secrets.ARM_CLIENT_ID }}
-      #     password: ${{ secrets.ARM_CLIENT_SECRET }}
 
-      # - name: Build da imagem Docker
-      #   run: docker build -t acrdesafiogovbr.azurecr.io/meu-website:${{ github.sha }} .
 
-#       - name: Push da imagem para o ACR
-#         run: docker push acrdesafiogovbr.azurecr.io/meu-website:${{ github.sha }}
-#   cd-helm:
-#     runs-on: ubuntu-latest
-#     needs: [ci-build-and-push] # Garante que este job só rode após o CI ser concluído com sucesso
-#     steps:
-#       - name: Checkout do código
-#         uses: actions/checkout@v4
+      - name: Login no Azure Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: acrdesafiogovbr.azurecr.io
+          username: ${{ secrets.ARM_CLIENT_ID }}
+          password: ${{ secrets.ARM_CLIENT_SECRET }}
+
+      - name: Build da imagem Docker
+        run: docker build -t acrdesafiogovbr.azurecr.io/meu-website:${{ github.sha }} .
+
+      - name: Push da imagem para o ACR
+        run: docker push acrdesafiogovbr.azurecr.io/meu-website:${{ github.sha }}
+  cd-helm:
+    runs-on: ubuntu-latest
+    needs: [ci-build-and-push] # Garante que este job só rode após o CI ser concluído com sucesso
+    steps:
+      - name: Checkout do código
+        uses: actions/checkout@v4
 
 #       - name: Login no Azure CLI
 #         uses: azure/login@v1
