--- a/app-stack/app/meu-website/nginx.conf
+++ b/app-stack/app/meu-website/nginx.conf
@@ -16,7 +16,15 @@ http {
             index index.html index.htm;
         }
 
-        # Endpoint de métricas para o Prometheus
+        # Endpoint de status do NGINX para o exporter
+        location /nginx_status {
+            stub_status on;
+            access_log off;
+            allow 127.0.0.1;
+            deny all;
+        }
+
+        # Endpoint de métricas para o Prometheus (opcional - manter as antigas)
         location /metrics {
             root /usr/share/nginx/html;
             add_header Content-Type text/plain;
