--- a/app-stack/app/meu-website/nginx.conf
+++ b/app-stack/app/meu-website/nginx.conf
@@ -21,6 +21,8 @@ http {
             stub_status on;
             access_log off;
             allow 127.0.0.1;
+            allow 192.168.1.0/24;  # Rede específica do seu cluster AKS
+            allow 10.244.0.0/16;   # Pod network (comum no AKS)
             deny all;
         }
 
