--- a/.github/workflows/build-cicd.yml
+++ b/.github/workflows/build-cicd.yml
@@ -42,7 +42,7 @@ jobs:
     permissions:
       id-token: write
       contents: read
-    needs: [ci-build-and-push] # Garante que este job só rode após o CI ser concluído com sucesso
+    needs: [ci-build-and-push]
     steps:
       - name: Checkout do código
         uses: actions/checkout@v4
@@ -53,13 +53,12 @@ jobs:
           client-id: ${{ secrets.ARM_CLIENT_ID }}
           tenant-id: ${{ secrets.ARM_TENANT_ID }}
           subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-          # client-secret: ${{ secrets.ARM_CLIENT_SECRET }}
 
       - name: Configurar o contexto do AKS
         uses: azure/aks-set-context@v3
         with:
-          resource-group: 'rg-desafio-gov-br' # Substitua pelo nome do Grupo de Recursos do seu AKS
-          cluster-name: 'aks-desafio-gov-br' # Substitua pelo nome do seu cluster AKS
+          resource-group: ${{ secrets.ARM_RESOURCE_GROUP }}
+          cluster-name: ${{ secrets.ARM.CLUSTER-NAME }}
 
       - name: Instalar/Atualizar a aplicação com Helm
         run: |
