--- a/app-stack/kubernetes/manifests-app/service.yml
+++ b/app-stack/kubernetes/manifests-app/service.yml
@@ -7,7 +7,12 @@ spec:
   selector:
     app: meu-website
   ports:
-    - protocol: TCP
+    - name: http
+      protocol: TCP
       port: 80
       targetPort: 80
+    - name: metrics
+      protocol: TCP
+      port: 9113
+      targetPort: 9113
   type: LoadBalancer
