--- a/app-stack/meu-website/templates/deployment.yaml
+++ b/app-stack/meu-website/templates/deployment.yaml
@@ -23,6 +23,9 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
-            - containerPort: {{ .Values.service.port }}
+            {{- range.Values.service.ports }}
+            - name: {{ .name }}
+              containerPort: {{ .targetPort }}
+            {{- end }}
 
 {{- end }}
