--- a/.github/workflows/build-cicd.yml
+++ b/.github/workflows/build-cicd.yml
@@ -2,8 +2,10 @@ name: CI-CD
 on:
   workflow_dispatch:
   push:
-      branches:
-        - main
+    branches:
+      - main
+    paths:
+      - app-stack/app/meu-website/*
 jobs:
 
   ci-build-and-push:
